Fixed private browsing appearing indicator overflowing the collapsed sidebar (closes https://github.com/zen-browser/desktop/issues/3580)

--- a/src/browser/base/content/zen-styles/zen-single-components.css
+++ b/src/browser/base/content/zen-styles/zen-single-components.css
@@ -56,3 +56,7 @@
 #alltabs-button {
   display: none !important;
 }
+
+.private-browsing-indicator-with-label {
+  display: none !important;
+}
